Revision history for Dist-Zilla-PluginBundle-Author-ETHER

{{$NEXT}}

0.097     2015-06-25 04:11:43Z
          - bump up prereq for [Test::EOL], for the 'finders' option
          - fix bash commands when building in a directory with whitespace
          - also copy INSTALL from the build and commit it to the repository
          - new =type collector in weaver bundle

0.096     2015-06-16 02:04:57Z
          - fix Module::Build::Tiny prohibition to also work with
            [ModuleBuildTiny::Fallback]
          - add header and footer regions to podweaver bundle, which is very
            useful for adding directives before any content

0.095     2015-06-15 03:37:11Z
          - switch to my weaver plugin bundle in newly-minted distributions;
            preventing older sharedir installs from interfering
          - always copy ppport.h from release back to the repository
          - define weaver plugin bundle config in a more compact and readable
            syntax
          - do not permit Module::Build::Tiny to be used as an installer if
            perl 5.006 compatibility is desired
          - remove use of build_warnings option in [Git::Check] (added in
            0.074)

0.094     2015-06-01 03:30:00Z
          - eliminate remaining uses of List::MoreUtils
          - remove universal application of [ShareDir] - distributions using
            sharedirs must add it themselves
          - add Pod::Weaver::PluginBundle::Author::ETHER and use it in my dzil
            plugin bundle

0.093     2015-05-22 03:44:45Z
          - move kwalitee.t to xt/author
          - reduced logging output during normal builds

0.092     2015-04-12 06:18:30Z
          - update all the $VERSION values, not just the first in each file
          - generate meta provides data from exactly what is in each file
          - fix whitespace in minted dist.ini for Dist::Zilla plugins

0.091     2015-03-28 04:56:11Z